route to character page from anime page

--- a/src/screens/animepage/AnimePage/CharachtersAndActors/CharacterActorCard/CharacterActorCard.css
+++ b/src/screens/animepage/AnimePage/CharachtersAndActors/CharacterActorCard/CharacterActorCard.css
@@ -37,3 +37,9 @@
   width: 70px;
   height: 90px;
 }
+
+.character:hover .name,
+.actor:hover .name {
+  text-shadow: -0.5px -0.5px 0 #ce1212, 0.5px -0.5px 0 #ce1212,
+    -0.5px 0.5px 0 #ce1212, 0.5px 0.5px 0 #ce1212;
+}
