--- a/src/screens/characterPage/CharacterPage/CharacterPage.css
+++ b/src/screens/characterPage/CharacterPage/CharacterPage.css
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  max-width: 225px;
 }
 
 .character-content__right-side {
@@ -48,6 +49,12 @@
   padding: 20px;
 }
 
+.voice-actors p {
+  color: #eeebdd;
+  font-size: 1.3rem;
+  line-height: 1.5rem;
+}
+
 .voice-actors-header {
   color: #eeebdd;
   font-size: 1.5rem;
@@ -70,4 +77,14 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+@media all and (max-width: 600px) {
+  .character-content {
+    flex-direction: column;
+  }
+
+  .character-content__left-side {
+    margin: auto;
+  }
 }
