--- a/src/screens/characterPage/CharacterPage/VoiceActorCard/VoiceActorCard.css
+++ b/src/screens/characterPage/CharacterPage/VoiceActorCard/VoiceActorCard.css
@@ -14,3 +14,8 @@
   font-size: 1rem;
   color: #a1a1a1;
 }
+
+.voice-actor-card:hover .name {
+  text-shadow: -0.5px -0.5px 0 #ce1212, 0.5px -0.5px 0 #ce1212,
+    -0.5px 0.5px 0 #ce1212, 0.5px 0.5px 0 #ce1212;
+}
