--- a/src/screens/profile/Profile.css
+++ b/src/screens/profile/Profile.css
@@ -30,8 +30,11 @@
   min-height: 100vh;
   background-color: #eeebdd;
   margin: auto;
-  display: grid;
-  grid-template-columns: 1fr 9fr;
+  display: flex;
+}
+
+.main-profile-content__right-side {
+  flex-grow: 1;
 }
 
 .profile-content {
@@ -52,6 +55,45 @@
   padding: 1rem;
   border: 1px solid #ccc;
 }
+
+.fav-lists {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 10px;
+}
+
+.fav-char,
+.fav-people {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.fav-char h1,
+.fav-people h1 {
+  text-decoration: underline;
+  text-underline-position: under;
+}
+
+/* slide css */
+
+.fav-char .carouselForwardArrow,
+.fav-char .carouselBackArrow,
+.fav-people .carouselForwardArrow,
+.fav-people .carouselBackArrow {
+  opacity: 0;
+  transition: 0.3s all ease;
+}
+
+.fav-char div:first-of-type:hover .carouselForwardArrow,
+.fav-char div:first-of-type:hover .carouselBackArrow,
+.fav-people div:first-of-type:hover .carouselForwardArrow,
+.fav-people div:first-of-type:hover .carouselBackArrow {
+  opacity: 1;
+}
+
+/* slide css */
 
 @media all and (max-width: 800px) {
   .main-profile-content {
