--- a/src/screens/animeListPage/MobileAnimeList/MobileAnimeListItem/MobileAnimeListItem.css
+++ b/src/screens/animeListPage/MobileAnimeList/MobileAnimeListItem/MobileAnimeListItem.css
@@ -1,7 +1,19 @@
 .mobile-list-item-container {
   color: #eeebdd;
-  transition: background-color 0.3s ease;
   font-size: 1.2rem;
+  width: 100%;
+  height: 200px;
+  transition: background-color 0.3s ease;
+}
+
+.mobile-list-item-background {
+  width: 100%;
+  flex-grow: 1;
+}
+
+.mobile-list-item-wrapper:has(.mobile-list-item-background:hover) {
+  background-color: rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 
 .mobile-list-item-wrapper {
@@ -10,10 +22,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
-.mobile-list-item-wrapper:hover {
-  background-color: rgba(0, 0, 0, 0.2);
-  cursor: pointer;
+  position: relative;
 }
 
 .mobile-list-item-info {
@@ -59,6 +68,9 @@
 .mobile-list-item-edit {
   margin-top: 5px;
   margin-left: 5px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .mobile-list-edit-icon {
@@ -69,4 +81,5 @@
 .mobile-list-edit-icon:hover {
   background-color: #eeebdd;
   color: #1b1717;
+  cursor: pointer;
 }
