--- a/src/screens/animeListPage/MobileAnimeList/MobileEditWindow/MobileEditWindow.css
+++ b/src/screens/animeListPage/MobileAnimeList/MobileEditWindow/MobileEditWindow.css
@@ -1,16 +1,17 @@
 .mobile-edit-item-overlay {
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 100;
   position: fixed;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.6);
+  cursor: auto;
 }
 
 .mobile-item-edit-window-container {
   width: 100%;
-  height: 250px;
+  height: 300px;
   border: 5px solid #ce1212;
   position: absolute;
   left: 0;
@@ -61,14 +62,16 @@
   cursor: pointer;
 }
 
-.mobile-item-edit-progress-input {
+.mobile-item-edit-progress-input,
+.mobile-item-edit-comment-input {
   position: relative;
   width: 90%;
   height: 100%;
   border-radius: 5px;
 }
 
-.mobile-item-edit-progress-input input {
+.mobile-item-edit-progress-input input,
+.mobile-item-edit-comment-input input {
   width: 100%;
   height: 100%;
   border-radius: 5px;
@@ -76,7 +79,8 @@
   padding-left: 5px;
 }
 
-.mobile-item-edit-progress-input input:focus {
+.mobile-item-edit-progress-input input:focus,
+.mobile-item-edit-comment-input input:focus {
   outline: none;
 }
 
@@ -90,13 +94,23 @@
   font-weight: 400;
 }
 
+.mobile-item-edit-comment-input:after {
+  position: absolute;
+  content: attr(data-maxlength);
+  padding: 5px;
+  color: black;
+  left: 0;
+  font-size: 9px;
+  top: 100%;
+}
+
 .mobile-item-edit-form-buttons {
   display: flex;
   width: 100%;
   justify-content: space-evenly;
   align-items: center;
   gap: 10px;
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 .mobile-item-edit-form-buttons button {
