added delete user button

--- a/src/screens/editProfilePage/EditProfilePage/EditProfilePage.css
+++ b/src/screens/editProfilePage/EditProfilePage/EditProfilePage.css
@@ -9,6 +9,9 @@
   background-color: #eeebdd;
   margin: auto;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .edit-profile-form {
