--- a/src/screens/profile/Profile.css
+++ b/src/screens/profile/Profile.css
@@ -41,12 +41,11 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 
 .about-me {
   width: 100%;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   padding: 1rem;
   font-size: 1.2rem;
 }
@@ -54,6 +53,7 @@
 .statistics {
   display: flex;
   flex-direction: column;
+  gap: 30px;
 }
 
 .user-info {
@@ -64,8 +64,7 @@
 .fav-lists {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  margin-top: 10px;
+  gap: 30px;
 }
 
 .fav-char,
