--- a/src/components/MustBeLoggedIn/MustBeLoggedIn.css
+++ b/src/components/MustBeLoggedIn/MustBeLoggedIn.css
@@ -13,6 +13,7 @@
   font-size: 3rem;
   font-weight: bold;
   background-color: #eeebdd;
+  z-index: 1000;
 }
 
 @media all and (max-width: 850px) {
