--- a/src/screens/profile/Profile.css
+++ b/src/screens/profile/Profile.css
@@ -1,7 +1,3 @@
-.profile-page {
-  width: 100%;
-  min-height: 100vh;
-}
 .profile-heading {
   text-align: center;
   font-size: 5rem;
@@ -59,6 +55,11 @@
 .user-info {
   padding: 1rem;
   border: 1px solid #ccc;
+  border-bottom: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  height: 100%;
 }
 
 .fav-lists {
@@ -98,16 +99,3 @@
 }
 
 /* slide css */
-
-@media all and (max-width: 800px) {
-  .main-profile-content {
-    grid-template-columns: auto;
-    /* justify-content: center; */
-    /* justify-items: center; */
-  }
-
-  .user-info {
-    order: 2;
-    border: none;
-  }
-}
