--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -49,3 +49,38 @@
   padding: 0 2px;
   color: #eeebdd;
 }
+
+.user-menu {
+  position: relative;
+}
+
+.avatar-wrapper {
+  padding-right: 5px;
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  padding: 0.55rem;
+}
+
+.user-menu .avatar-wrapper:hover {
+  background-color: #810000;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.user-menu .avatar-wrapper img {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+}
+
+.drop-down-arrow {
+  border: 4px solid #fff;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  border-right-color: transparent;
+  display: inline-block;
+  height: 0;
+  width: 0;
+  margin-top: 4px;
+}
