--- a/src/screens/profile/SideMenu/SideMenu.css
+++ b/src/screens/profile/SideMenu/SideMenu.css
@@ -4,10 +4,11 @@
   justify-content: space-evenly;
   align-items: flex-start;
   background-color: #ce1212;
-  top: 50%;
   margin-left: 10px;
   position: fixed;
   z-index: 99;
+  transition: opacity 0.3s ease-in;
+  opacity: 0.3;
 }
 
 .side-menu-item {
@@ -16,6 +17,15 @@
   color: #eeebdd;
   transition: all 0.2s ease;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45px;
+  height: 45px;
+}
+
+.profile-side-menu:hover {
+  opacity: 1;
 }
 
 .side-menu-item:hover {
