--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 html {
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   font-size: 10px;
   font-family: "Questrial", sans-serif;
   scroll-behavior: smooth;
