--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,4 @@
 .card-container {
-  /* width: 150px;
-  height: 225px; */
   border-radius: 5px;
 }
 
@@ -46,7 +44,7 @@
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
 }
-.card-bottom h3 {
+.card-content-wrapper .card-bottom h3 {
   text-align: center;
   padding: 0.5rem;
 }
