--- a/src/screens/animepage/AnimePage/EntryPageHero/EntryPageHero.css
+++ b/src/screens/animepage/AnimePage/EntryPageHero/EntryPageHero.css
@@ -29,25 +29,12 @@
 .add-to-list-container {
   width: 100%;
   height: 40px;
-  background-color: rgb(231 69 56);
-  color: #eeebdd;
-  font-size: 1.5rem;
   border: none;
   display: flex;
   align-items: center;
-  justify-content: center;
-}
-
-.remove-from-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-.remove-from-list:hover {
-  cursor: pointer;
+  gap: 5px;
+  border-radius: 5px;
+  margin-top: 2px;
 }
 
 .entry-info {
