--- a/src/screens/AdvancedSearchPage/MediaSearchMenu/MediaSearchMenu.css
+++ b/src/screens/AdvancedSearchPage/MediaSearchMenu/MediaSearchMenu.css
@@ -1,9 +1,9 @@
 .search-menu {
   display: flex;
   font-size: 15px;
-  gap: 20px;
   justify-content: center;
   margin-top: 50px;
+  gap: 20px;
 }
 
 .menu-item {
@@ -80,6 +80,7 @@
   flex-direction: column;
   max-height: 300px;
   overflow-y: scroll;
+  z-index: 2;
 }
 
 .dropdown-options::-webkit-scrollbar {
@@ -162,4 +163,15 @@
 
 .clear-all:hover i {
   color: red;
+}
+
+@media all and (max-width: 1000px) {
+  .search-menu {
+    display: grid;
+  }
+
+  .menu-item {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
