--- a/src/screens/AdvancedSearchPage/TableLikeCard/TableLikeCard.css
+++ b/src/screens/AdvancedSearchPage/TableLikeCard/TableLikeCard.css
@@ -1,9 +1,17 @@
 .advanced-search-result {
   display: grid;
   background-color: #222;
-  width: 90%;
+  width: 100%;
   margin: auto;
   align-items: center;
+}
+
+.grid-without-rank {
+  grid-template-columns: min-content 4.5fr 1fr 1fr 1fr;
+}
+
+.grid-with-rank {
+  grid-template-columns: 0.2fr min-content 2fr 0.5fr 0.5fr 0.6fr;
 }
 
 .search-res-rank {
@@ -23,7 +31,7 @@
   height: 100%;
 }
 
-.adv-search-res-item {
+.advanced-search-result .adv-search-res-item {
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -31,14 +39,14 @@
   height: 100%;
 }
 
-.res-item-heading {
+.advanced-search-result .res-item-heading {
   color: #eeebdd;
   font-size: 15px;
   font-weight: bold;
   width: fit-content;
 }
 
-.res-item-details {
+.advanced-search-result .res-item-details {
   color: #a1a1a1;
   font-size: 13px;
 }
