spinner position fix

--- a/src/screens/RankedListPage/RankedListPage.css
+++ b/src/screens/RankedListPage/RankedListPage.css
@@ -6,6 +6,13 @@
   margin: auto;
 }
 
+.ranked-list-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .ranked-list {
   display: flex;
   flex-direction: column;
