--- a/src/screens/characterPage/CharacterPage/Appearances/SortByDropDown/SortByDropDown.css
+++ b/src/screens/characterPage/CharacterPage/Appearances/SortByDropDown/SortByDropDown.css
@@ -47,3 +47,19 @@
 .sort-option:hover {
   background-color: #ccc;
 }
+
+.sort-label {
+  position: relative;
+}
+
+.sort-label .icon-wrapper {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 15px;
+  height: 15px;
+  font-size: 15px;
+  top: calc(50% - 7.5px);
+  right: 10px;
+}
