--- a/src/components/SearchBar/SearchResults/SearchResults.css
+++ b/src/components/SearchBar/SearchResults/SearchResults.css
@@ -11,3 +11,14 @@
 .search-results-container::-webkit-scrollbar {
   display: none;
 }
+
+.no-results {
+  color: #eeebdd;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-weight: bold;
+}
