--- a/src/screens/animeListPage/MobileAnimeList/MobileAnimeListItem/MobileUserListItem.css
+++ b/src/screens/animeListPage/MobileAnimeList/MobileAnimeListItem/MobileUserListItem.css
@@ -53,7 +53,7 @@
 .mobile-list-item-info {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   width: 100%;
   padding: 5px;
   transition: background-color 0.5s ease;
